force-app/main/default/objects/Product_Image__c/Product_Image__c.object-meta.xml
<CustomObject>
    <label>Product Image</label>
    <nameField>
        <label>Product Image Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Images</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>