force-app/main/default/objects/Product_Image__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The related product</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Images</relationshipLabel>
    <relationshipName>ProductImages</relationshipName>
    <type>Lookup</type>
</CustomField>