force-app/main/default/objects/Product_Image__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <inlineHelpText>Required if Static Resource is Selected in Image Type</inlineHelpText>
    <label>Static Resource</label>
    <length>50</length>
    <type>Text</type>
</CustomField>