force-app/main/default/objects/Product_Image__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <inlineHelpText>The URL for the image</inlineHelpText>
    <label>URL</label>
    <type>Url</type>
</CustomField>