force-app/main/default/objects/Product_Image__c/validationRules/Rule_For_Static_Resource_Image_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Rule_For_Static_Resource_Image_Type</fullName>
    <active>true</active>
    <errorConditionFormula>IF(  ISPICKVAL( Type__c ,&apos;Static Resource&apos; ),
 ISBLANK( ResourceURL__c ) &amp;&amp;  ISBLANK( Resource__c ) 
,false)</errorConditionFormula>
    <errorMessage>Resource URL and static resource must be populated if the Image Type is Static Resource</errorMessage>
</ValidationRule>